--- a/src/components/base/Card.pug
+++ b/src/components/base/Card.pug
@@ -1,3 +1,10 @@
+//-
+  params: {
+    link: string,
+    title: string,
+    description: string,
+    icon?: string
+  }
 mixin Card(params={})
   - const props = Object.assign({}, params)
   .card
