--- a/src/components/base/ContactBanner.pug
+++ b/src/components/base/ContactBanner.pug
@@ -1,3 +1,13 @@
+//-
+  params: {
+    link: string,
+    tel1: string,
+    tel2: string,
+    tel3: string
+    dep: string,
+    div: string,
+    inCharge: string
+  }
 mixin ContactBanner(params={})
   - const props = Object.assign({}, params)
   .contact-banner-container.box-shadow
