--- a/src/components/base/Content.pug
+++ b/src/components/base/Content.pug
@@ -1,3 +1,7 @@
+//-
+  params: {
+    title: string
+  }
 mixin Content(params={})
   - const props = Object.assign({}, params)
   h2.article__heading
