--- a/src/components/base/LinkChipList.pug
+++ b/src/components/base/LinkChipList.pug
@@ -1,5 +1,15 @@
 include ./LinkChip.pug
 
+//-
+  params: {
+    title: string,
+    list: [
+      {
+        link: string,
+        label: string
+      }
+    ]
+  }
 mixin LinkChipList(params={})
   - const props = Object.assign({}, params)
   .link-chip-list
