--- a/src/components/base/LinkMenu.pug
+++ b/src/components/base/LinkMenu.pug
@@ -1,3 +1,10 @@
+//-
+  params: {
+    link: string,
+    icon?: string,
+    basePath?: string,
+    text: string
+  }
 mixin LinkMenu(params={})
   - const props = Object.assign({}, params)
     .link-menu
