--- a/src/components/pages/detail.pug
+++ b/src/components/pages/detail.pug
@@ -78,6 +78,7 @@ block pageOption
         text: "おじいちゃんとおばあちゃんのための子育てセミナーおじいちゃんとおばあちゃんのための子育てセミナーおじいちゃんとおばあちゃんのための子育てセミナーおじいちゃんとおばあちゃんのための子育てセミナーおじいちゃんとおばあちゃんのための子育てセミナーおじいちゃんとおばあちゃんのための子育てセミナーおじいちゃんとおばあちゃんのための子育てセミナーおじいちゃんとおばあちゃんのための子育てセミナー",
       },
     ]
+    const pageTitle = breadcrumbItem[3].text
 
 include ../base/Breadcrumb.pug
 include ../base/ContactBanner.pug
