--- a/src/components/pages/keyword-search-result.pug
+++ b/src/components/pages/keyword-search-result.pug
@@ -3,6 +3,7 @@ extends ../common/_layout
 block pageOption
   include ../../data/_data.pug
   -
+    const pageTitle = "キーワード検索結果"
     const breadcrumbItem = [
       {
         text : "トップページ",
