--- a/src/components/pages/keyword-search.pug
+++ b/src/components/pages/keyword-search.pug
@@ -2,6 +2,7 @@ extends ../common/_layout
 
 block pageOption
   -
+    const pageTitle = "キーワード検索"
     const breadcrumbItem = [
       {
         text : "トップページ",
