--- a/src/components/base/Banner.pug
+++ b/src/components/base/Banner.pug
@@ -1,3 +1,13 @@
+//-
+  params: {
+    title: string,
+    description: string,
+    help: {
+      link: string,
+      text: string
+    },
+    icon: string
+  }
 mixin Banner(params={})
   - const props = Object.assign({}, params)
   .banner
