--- a/src/components/base/Input.pug
+++ b/src/components/base/Input.pug
@@ -1,3 +1,8 @@
+//-
+  params: {
+    label: string,
+    placeholder: string
+  }
 mixin Input(params={})
   - const props = Object.assign({}, params)
   .input 
