--- a/src/components/base/Navigation.pug
+++ b/src/components/base/Navigation.pug
@@ -1,3 +1,12 @@
+//-
+  params: {
+    items: [
+      {
+        link: string,
+        label: string
+      }
+    ]
+  }
 mixin Navigation(params={})
   - const props = Object.assign({}, params)
   nav.nav
