--- a/src/components/common/_layout.pug
+++ b/src/components/common/_layout.pug
@@ -14,12 +14,19 @@ html(lang="ja")
     meta(name="description" content="")
     meta(name="keywords" content="")
     meta(name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0")
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-KXTM57M');</script>
+    <!-- End Google Tag Manager -->
     title #{pageTitle} | Test A
     link(rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
     link(href="https://fonts.googleapis.com/css2?family=BIZ+UDGothic&display=swap" rel="stylesheet")
 
   body(class=pageClass)
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXTM57M"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     include ./_header.pug
 
     .main(class=contentClass)
